- #338: Add Pathways User guide to the navbar under "You"
- New specialist and clinic offices are now automatically 'public' unless otherwise specified
- #295: Limit area of practice filters shown to local referral area for Family Practice only
- #282: Red Flags and Pearls now show under Physician Resources in navbar search
- #314: Add Community Services and Red Flags to Entity Page Views

### Fixed:
- Users now taken to correct tab on specialty page when the come there from a tab link on another page

## [2016-02-20] [Since 2016-02-06 Integration]
### Added:
- Super admins can now view Pathways as other divisions and roles without logging out
- Admins can now view Pathways as users in their divisions without logging out
- Service to create seeds for a fake database

### Changed:
- Updated wording of subscription emails to be more natural
- Update Level of Evidences, show levels as "(LOE=A)" and have them link to https://www.essentialevidenceplus.com/product/ebm_loe.cfm?show=grade

### Fixed:
- 'Stats' report breaking if procedures don't have any procedure specializations
- Search for bariatric general surgery
- A specialty could be created without all divisions having settings for it
- A new division would not have all of its specialty settings created if Fraser Northwest didn't have settings for all specialties.
- Error in versions#show

## [2016-02-06] [Since 2016-01-30 Integration]
### Added:
- CR #233: Admins can now add Level of Evidence (LOE) scores to resources. (To allow time for data entry, Level of Evidence scores are only visible to administrators when they edit or view a resource.)
- CR #313: Divisional admins and super admins can now easily "copy" news items from other divisions into their division.
- CR #285: Users can now control the profiles of specialists and clinics who "only work out of hospitals and clinics" [Follow up from #256]
- CR #226: Admins can now borrow resources for their division directly from