@@ -36,6 +36,7 @@
 
   = f.input :searchable
   = f.input :shareable
+  = f.input :visible_to_public
   = f.input :shared_care
 
   %h3 Content
